--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -15,7 +16,7 @@
     </nav>
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-6">
+        <div class="col-9 md:col-6">
           <h1 class="mt-5 text-center">TODO List</h1>
           <!-- my-3 = "mt-3 mb-3" -->
           <div class="input-group my-3">
